--- a/compose.yaml
+++ b/compose.yaml
@@ -1,27 +1,24 @@
 services:
   mc:
-    image: ${REGISTRY}/mc
-    runtime: crun
-    restart: always
-    command: mirror --overwrite --watch /var/files/ oncolog/oncolog-${SUB}-files/
-    configs:
-      - source: mc
-        target: /root/.mc/config.json
-    network_mode: host
-    volumes:
-      - type: volume
-        read_only: true
-        source: files
-        target: /var/files
-      - type: volume
-        read_only: true
-        source: logs
-        target: /var/oncolog-logs
+    env_file:
+      - .env
+    extends:
+      service: mc
+      file: "./mc/compose.yaml"
+  ofelia:
+    env_file:
+      - .env
+    extends:
+      service: ofelia
+      file: "./ofelia/compose.yaml"
 
 configs:
   mc:
     name: mc
-    file: "./config.json"
+    file: "./mc/config.json"
+  ofelia:
+    name: ofelia
+    file: "./ofelia/config.ini"
 
 volumes:
   files:
@@ -31,3 +28,9 @@ volumes:
     name: ${SUB}-logs
     external: true
 
+networks:
+  ingress:
+    name: ingress
+    driver: overlay
+    attachable: true
+    external: true
