--- a/mc/compose.yaml
+++ b/mc/compose.yaml
@@ -3,6 +3,7 @@ services:
     image: ${REGISTRY}/mc
     runtime: crun
     restart: always
+    container_name: mc-oncolog-files
     entrypoint: tail
     command: -f /dev/null
     environment:
