--- a/ofelia/config.ini
+++ b/ofelia/config.ini
@@ -1,4 +1,4 @@
-[job-exec "mc-dev-files"]
+[job-exec "mc-sfh-files"]
 schedule = 0 1 * * * *
 container = mc-oncolog-files
-command = mc mirror --overwrite /var/files/ oncolog/oncolog-dev-files/
+command = mc mirror --overwrite /var/files/ oncolog/oncolog-sfh-files/
