--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,9 @@
 services:
   mc:
-    env_file:
-      - .env
     extends:
       service: mc
       file: "./mc/compose.yaml"
   ofelia:
-    env_file:
-      - .env
     extends:
       service: ofelia
       file: "./ofelia/compose.yaml"
@@ -22,15 +18,5 @@ configs:
 
 volumes:
   files:
-    name: ${SUB}-files
-    external: true
-  logs:
-    name: ${SUB}-logs
-    external: true
-
-networks:
-  ingress:
-    name: ingress
-    driver: overlay
-    attachable: true
+    name: files
     external: true
