--- a/ofelia/compose.yaml
+++ b/ofelia/compose.yaml
@@ -1,7 +1,7 @@
 services:
   ofelia:
     image: ${REGISTRY}/ofelia
-    runtime: crun
+    runtime: runc
     restart: always
     network_mode: host
     environment:
