--- a/ofelia/config.ini
+++ b/ofelia/config.ini
@@ -1,4 +1,4 @@
-[job-exec "mc-sfh-files"]
+[job-exec "files-backuper"]
 schedule = 0 1 * * * *
-container = mc-oncolog-files
+container = files-backuper
 command = mc mirror --overwrite /var/files/ oncolog/oncolog-sfh-files/
