--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,5 @@
+name: files-backuper
+
 services:
   mc:
     extends:
@@ -8,15 +10,7 @@ services:
       service: ofelia
       file: "./ofelia/compose.yaml"
 
-configs:
-  mc:
-    name: mc
-    file: "./mc/config.json"
-  ofelia:
-    name: ofelia
-    file: "./ofelia/config.ini"
-
 volumes:
   files:
-    name: ${ROOT_PROJ}_files
+    name: files
     external: true
