--- a/ofelia/compose.yaml
+++ b/ofelia/compose.yaml
@@ -1,16 +1,11 @@
 services:
   ofelia:
-    image: ${REGISTRY}/ofelia
-    runtime: runc
+    image: reg.oncolog.ir/ofelia
+    container_name: files-ofelia
     restart: always
     network_mode: host
     environment:
       TZ: "Asia/Tehran"
-    configs:
-      - source: ofelia
-        target: /etc/ofelia/config.ini
     volumes:
-      - type: bind
-        read_only: true
-        source: /var/run/docker.sock
-        target: /var/run/docker.sock
+      "./ofelia/config.ini:/etc/ofelia/config.ini"
+      "/var/run/docker.sock:/var/run/docker.sock:ro"
